tests/snapshots/runtime_error_fixtures/list_boundary_string_into_list.snap
---
source: tests/error_fixtures/runtime_error_fixtures_snapshots.rs
assertion_line: 136
---
Fixture: examples/runtime_errors/list_boundary_string_into_list.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[ 1 of 12] Compiling  Assert
[ 2 of 12] Compiling  Array
[ 3 of 12] Compiling  List
[ 4 of 12] Compiling  Either
[ 5 of 12] Compiling  IO
[ 6 of 12] Compiling  Math
[ 7 of 12] Compiling  Numeric
[ 8 of 12] Compiling  Option
[ 9 of 12] Compiling  Primops
[10 of 12] Compiling  String
[11 of 12] Compiling  BoundaryUnknown
• 1 error • examples/runtime_errors/list_boundary_string_into_list.flx
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `sum_list`.

  examples/runtime_errors/list_boundary_string_into_list.flx:8:10
  |
3 | fn sum_list(xs: List<Int>) -> Int {
  | --------------------------------- `sum_list` expects `List<Int>` as the 1st parameter
4 |     fold(xs, 0, /(acc: Int, x: Int) -> acc + x)
5 | }
6 |
7 | let dynamic = RuntimeErrors.BoundaryUnknown.dynamic_string()
8 | sum_list(dynamic)
  |          ^^^^^^^
  |          ------- this argument has type `String`

Note:
  expected argument type: List<Int>
  found argument type: String
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `List<Int>` value as the 1st argument.
